--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,15 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f1f5f9;
   color: #1e293b;
-  overflow: hidden;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  @media (max-width: 1000px) {
+    height: unset;
+  }
 }
 
 .layout {
@@ -18,6 +20,9 @@ body {
   padding: 20px;
   gap: 20px;
   height: calc(100vh - 115px);
+  @media (max-width: 1000px) {
+    flex-wrap: wrap;
+  }
 }
 
 .sidebar,
@@ -31,14 +36,41 @@ body {
 
 .left-sidebar {
   flex: 0 0 280px;
+  @media (max-width: 1000px) {
+    flex: 0 0 calc(50% - 12px);
+    max-width: calc(50% - 12px);
+  }
+
+  @media (max-width: 600px) {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
 .center {
   flex: 1;
   display: flex;
   flex-direction: column;
+  @media (max-width: 1000px) {
+    flex: 1 1 100%;
+    order: 3;
+  }
 }
 .right-sidebar {
   flex: 0 0 400px;
   display: flex;
   flex-direction: column;
+
+  @media (max-width: 1200px) {
+    flex: 0 0 280px;
+  }
+
+  @media (max-width: 1000px) {
+    flex: 0 0 calc(50% - 12px);
+    max-width: calc(50% - 12px);
+  }
+
+  @media (max-width: 600px) {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
