Fix style for mobile

--- a/src/components/HeaderBar/style.css
+++ b/src/components/HeaderBar/style.css
@@ -5,6 +5,9 @@
   justify-content: space-between;
   align-items: center;
   color: white;
+  position: sticky;
+  top: 0;
+  z-index: 12;
 
   @media (max-width: 600px) {
     padding: 5px 10px;
